--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
     object-fit: cover;
     filter: brightness(0.6);
 }
-.content-main{
+.navbar{
+    transition: all 0.5s;
+}
+.navbar-scrolled{
+    background-color:  black;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, .15);
+}
+.content-about{
     margin: 3em 10em;
+    font-size: 20px;
 }
