--- a/style.css
+++ b/style.css
@@ -24,8 +24,9 @@
 }
 
 /*Footer*/
-.footer-dark {
-    padding: 50px 0;
-    color: #f0f9ff;
-    background-color: #282d32;
+.footer {
+    margin-top: 20px;
+    padding: 20px;
+    color: azure;
+    background-color: green;
 }
