--- a/style.css
+++ b/style.css
@@ -27,10 +27,14 @@ html, body {
     box-shadow: 0 3px 10px rgba(0, 0, 0, .15);
 }
 
-
-.card-img-top {
+.menu-img{
     width: 100%;
     height: 40vh;
+}
+
+.menu{
+    width: 2%;
+    height: 25vh;
     object-fit: cover;
     filter: blur(2px);
 }
@@ -41,6 +45,7 @@ html, body {
     color: azure;
     background-color: green;
 }
-social {
+.social {
     color: white;
-  }
+}
+
