--- a/style.css
+++ b/style.css
@@ -39,13 +39,18 @@ html, body {
     filter: blur(2px);
 }
 .food-card-img{
-    width: 9vw;
+    width: 10vw;
     height: 20vh;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.card-food{
+    border-bottom: 2px solid green;
 }
 
 /*Footer*/
 .footer {
-    padding: 20px;
     color: azure;
     background-color: green;
 }
