--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     height: 100vh;
     filter: brightness(50%);
 }
-
+/*Carousel background*/
 .carousel-item {
 	height: 100vh;
 	min-height: 300px;
@@ -66,19 +66,37 @@ body {
 }
 
 /*End section of BG Carousel*/
-.navbar a{
+/*Navbar*/
+.navbar{
     transition: all 0.5s;
-    color: var(--color4);
+}
+.navbar a{
+    color: white;
 }
 
-.navbar .nav-item.active a {
-    color: red;
+.navbar .nav-item .active {
+    color: var(--color4);
   }
 
 .navbar-scrolled {
     background-color: var(--color1);
     box-shadow: 0 3px 10px rgba(0, 0, 0, .15);
 }
+
+
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link:focus {
+  color: var(--color3);
+  transition: color 0.3s ease-in-out;
+}
+
+.navbar-brand:hover,
+.navbar-brand:focus {
+  color: var(--color3);
+  transition: color 0.3s ease-in-out;
+}
+  
+/*End of Navbar*/
 
 .menu-img {
     width: 100%;
@@ -212,7 +230,7 @@ body {
 .food-card .food-card_content .food-card_bottom-section .food-card_price {
     font-size: 28px;
     font-weight: 500;
-    color: #F47A00;
+    color: var(--color2);
 }
 
 .food-card .food-card_content .food-card_bottom-section .food-card_order-count {
@@ -253,7 +271,7 @@ body {
 
 /*Footer*/
 .footer {
-    color: azure;
+    color: white;
     background-color: var(--color1);
 }
 
