--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --color1: #32502E;
     --color2: #406343;
     --color3: #ECE7B4;
@@ -9,6 +9,7 @@ html,
 body {
     max-width: 100%;
     overflow-x: hidden;
+    font-family: 'Chivo', sans-serif;
 }
 
 /*BG carousel on index*/
@@ -35,48 +36,54 @@ body {
     height: 100vh;
     filter: brightness(50%);
 }
+
 /*Carousel background*/
 .carousel-item {
-	height: 100vh;
-	min-height: 300px;
+    height: 100vh;
+    min-height: 300px;
 }
+
 .carousel-caption {
-	bottom: 220px;
+    bottom: 220px;
 }
+
 .carousel-caption h1 h2 h3 h4 h5 h6 {
-	font-size: 45px;
-	text-transform: uppercase;
+    font-size: 45px;
+    text-transform: uppercase;
     background: aqua;
-	letter-spacing: 2px;
-	margin-top: 25px;
+    letter-spacing: 2px;
+    margin-top: 25px;
 }
+
 .carousel-caption p {
-	width: 60%;
-	margin: auto;
-	font-size: 18px;
-	line-height: 1.9;
+    width: 60%;
+    margin: auto;
+    font-size: 18px;
+    line-height: 1.9;
 }
+
 .carousel-caption a {
-	text-transform: uppercase;
-	text-decoration: none;
-	background: darkorange;
-	padding: 10px 30px;
-	display: inline-block;
-	color: #000;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: darkorange;
+    padding: 10px 30px;
+    display: inline-block;
+    color: #000;
 }
 
 /*End section of BG Carousel*/
 /*Navbar*/
-.navbar{
+.navbar {
     transition: all 0.5s;
 }
-.navbar a{
+
+.navbar a {
     color: white;
 }
 
 .navbar .nav-item .active {
     color: var(--color4);
-  }
+}
 
 .navbar-scrolled {
     background-color: var(--color1);
@@ -86,16 +93,16 @@ body {
 
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
-  color: var(--color3);
-  transition: color 0.3s ease-in-out;
+    color: var(--color3);
+    transition: color 0.3s ease-in-out;
 }
 
 .navbar-brand:hover,
 .navbar-brand:focus {
-  color: var(--color3);
-  transition: color 0.3s ease-in-out;
+    color: var(--color3);
+    transition: color 0.3s ease-in-out;
 }
-  
+
 /*End of Navbar*/
 
 .menu-img {
@@ -268,6 +275,34 @@ body {
         object-fit: cover;
     }
 }
+
+/*Tabs on Food*/
+.nav-tabs .nav-item .nav-link {
+    position: relative;
+    padding-left: 20px;
+    color: black;
+}
+
+.nav-tabs .nav-item .nav-link:before {
+    content: attr(href);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #777;
+}
+
+.nav-tabs .nav-item .nav-link.active:before {
+    color: #000;
+}
+
+
+/*End of tabs*/
 
 /*Footer*/
 .footer {
