--- a/style.css
+++ b/style.css
@@ -51,11 +51,15 @@ body {
     transition: all 0.5s;
 }
 
-.navbar a {
+.navbar-brand h3 {
     color: white;
 }
 
-.navbar .nav-item .active {
+.navbar .navbar-nav .nav-item a {
+    color: white;
+}
+
+.navbar .navbar-nav .nav-item .active {
     color: var(--color4);
 }
 
@@ -64,16 +68,15 @@ body {
     box-shadow: 0 3px 10px rgba(0, 0, 0, .15);
 }
 
-
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
-    color: var(--color3);
+    color: var(--color3) !important;
     transition: color 0.3s ease-in-out;
 }
 
 .navbar-brand:hover,
 .navbar-brand:focus {
-    color: var(--color3);
+    color: var(--color3) !important;
     transition: color 0.3s ease-in-out;
 }
 
@@ -81,7 +84,7 @@ body {
 
 /*Carousel recomendation*/
 .bg-img-1 {
-    background-image: url(./img/);
+    background-image: url(./img/Menu_Utama/Laksa\ Medan.png);
 }
 
 .bg-img-2 {
@@ -92,31 +95,11 @@ body {
     background-image: url(./img/Front_Page/JajanPasar.png);
 }
 
-.rec-image{
+.rec-image {
     height: 50vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-}
-/*Carousel recomendation*/
-
-.menu-img {
-    width: 100%;
-    height: 40vh;
-}
-
-.menu {
-    width: 2%;
-    height: 25vh;
-    object-fit: cover;
-    filter: blur(2px);
-}
-
-.food-card-img {
-    width: 10vw;
-    height: 20vh;
-    object-fit: cover;
-    border-radius: 50%;
 }
 
 /* Menu Card*/
@@ -289,8 +272,11 @@ body {
     text-decoration: underline;
 }
 
-
 /*End of tabs*/
+
+.fa-square{
+    color: var(--color1);
+}
 
 /*Footer*/
 .footer {
