--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 
 .abouthead-overlay h1 {
     font-size: 10ex;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Lobster', cursive;
     color: var(--color3);
 }
 
@@ -198,7 +198,19 @@ body {
 /* Menu Card*/
 .food-card {
     border-radius: 0px;
+}
 
+/* Plans Card */
+.img-plans{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+}
+.img-plans2{
+    max-height: 20cm;
+    object-fit: cover;
+    position: relative;
 }
 
 .food-card img {
@@ -214,17 +226,17 @@ body {
 
 /*Tabs on Category*/
 .nav-colorfirst .nav-item a {
-    color: gray;
+    color: white;
     font-size: 30px;
 }
 
 .nav-colorfirst .nav-item a:hover {
-    color: var(--color2);
+    color: var(--color3);
     transition: color 1s ease;
 }
 
 .nav-colorfirst .nav-item a.active {
-    color: var(--color2);
+    color: var(--color4);
     font-size: 30px;
     transition: all 1s;
     text-decoration: underline;
@@ -235,6 +247,7 @@ body {
 .fa-square {
     color: var(--color2);
 }
+
 
 /*Footer*/
 .footer {
