--- a/style.css
+++ b/style.css
@@ -1,35 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Ubuntu:wght@700&display=swap');
-
-/* font-family: 'Open Sans', sans-serif;
-font-family: 'Ubuntu', sans-serif; */
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Roboto&display=swap');
+/* 
+font-family: 'Nunito', sans-serif;
+font-family: 'Roboto', sans-serif; */
 :root {
     --color1: #32502E;
     --color2: #406343;
     --color3: #ECE7B4;
     --color4: #F3EFCC;
-<<<<<<< Updated upstream
-=======
-    
->>>>>>> Stashed changes
 }
 
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: 'Ubuntu', sans-serif;
-    
+    font-family: 'Nunito', sans-serif;
 }
-
 
 html,
 body {
     max-width: 100%;
     overflow-x: hidden;
     /* background-color: var(--color4) !important; */
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-<<<<<<< Updated upstream
 /*BG on index*/
 .homehead {
     background-size: cover;
@@ -94,8 +86,6 @@ body {
 
 /*End Section of BG on index*/
 
-=======
->>>>>>> Stashed changes
 /*Navbar*/
 .navbar {
     transition: all 0.5s;
@@ -157,13 +147,12 @@ body {
 }
 
 .homehead-overlay h1 {
-    font-size: 30vh;
-    font-family: 'Dancing Script', cursive;
+    font-size: 10dvw;
     color: var(--color3);
 }
 
 .homehead-overlay h5{
-    font-size: 20px;
+    font-size: 3dvh;
 }
 
 .abouthead {
@@ -184,7 +173,6 @@ body {
 
 .abouthead-overlay h1 {
     font-size: 10ex;
-    font-family: 'Lobster', cursive;
     color: var(--color3);
 }
 
@@ -210,13 +198,13 @@ body {
 
 .img-rest {
     width: 7cm;
-    height: 85vh;
+    height: 100dvh;
     object-fit: cover;
 }
 
 .img-rest-2 {
     width: 7cm;
-    height: 85vh;
+    height: 100dvh;
     object-fit: cover;
     margin-top: 50px;
 }
@@ -252,12 +240,12 @@ body {
 
     .img-rest {
         width: 4cm;
-        height: 45vh;
+        height: 45dvh;
     }
 
     .img-rest-2 {
         width: 4cm;
-        height: 45vh;
+        height: 45dvh;
         margin-top: 5px;
     }
 
@@ -269,7 +257,7 @@ body {
     }
 
     .homehead-overlay h1{
-        font-size: 51px;
+       font-size: 5vh;
     }
     
     .homehead-overlay h5{
@@ -357,7 +345,7 @@ body {
 
 /* menu card */
 .food-card img {
-    height: 30vh;
+    height: 40dvb;
     object-fit: cover;
 }
 
