--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Roboto&display=swap');
+
 /* 
 font-family: 'Nunito', sans-serif;
 font-family: 'Roboto', sans-serif; */
 :root {
-    --color1: #32502E;
+    --color1: #32502e;
     --color2: #406343;
     --color3: #ECE7B4;
     --color4: #F3EFCC;
 }
 
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Nunito', sans-serif;
 }
 
@@ -43,7 +49,7 @@ body {
     color: var(--color3);
 }
 
-.homehead-overlay h5{
+.homehead-overlay h5 {
     font-size: 20px;
     font-family: 'Ubuntu', sans-serif !important;
 }
@@ -85,7 +91,7 @@ body {
     }
 }
 
-ul{
+ul {
     list-style-type: none;
 }
 
@@ -156,7 +162,7 @@ ul{
     color: var(--color3);
 }
 
-.homehead-overlay h5{
+.homehead-overlay h5 {
     font-size: 3dvh;
 }
 
@@ -220,12 +226,13 @@ ul{
 
 .heading {
     font-size: 100px;
+
     @media (max-width:768px) {
         font-size: 56px;
     }
 }
 
-.desk{
+.desk {
     width: 50%;
 }
 
@@ -257,15 +264,16 @@ ul{
     .homehead {
         min-height: 80vh;
     }
-    .desk{
+
+    .desk {
         width: 100%;
     }
 
-    .homehead-overlay h1{
-       font-size: 5vh;
+    .homehead-overlay h1 {
+        font-size: 5vh;
     }
-    
-    .homehead-overlay h5{
+
+    .homehead-overlay h5 {
         font-size: 15px;
     }
 
@@ -276,10 +284,12 @@ ul{
     .navbar {
         background-color: var(--color2);
     }
+
     .img-rest {
         width: 4cm;
         height: 45vh;
     }
+
     .img-rest-2 {
         width: 4cm;
         height: 45vh;
@@ -289,19 +299,19 @@ ul{
         font-size: 55px;
     }
 
-    .desk{
+    .desk {
         width: 50%;
     }
 
-    .homehead-overlay h1{
+    .homehead-overlay h1 {
         font-size: 110px;
     }
-    
-    .homehead-overlay h5{
+
+    .homehead-overlay h5 {
         font-size: 18px;
     }
 
-    }
+}
 
 
 /*Carousel recomendation*/
@@ -323,31 +333,43 @@ ul{
 
 /* Plans Card */
 
-.img-plans {
-    max-height: 100vh;
-    object-fit: cover;
-    position: relative;
-    filter: brightness(65%);
+.card-plan {
+    border-radius: 2px;
+    outline-width: 100px;
+    padding: 20px 20px ;
+    outline: solid #32502e;
+    height: 1005px;
 }
 
-.plans-block-text-right {
-    background-color: rgba(64, 99, 67, 0.65);
-    margin-right: 20px;
-    padding: 5cm;
-}
-
-.plans-block-text-left {
-    background-color: rgba(64, 99, 67, 0.65);
-    margin-left: 20px;
-    padding: 5cm;
-}
-
-.plan-img{
-    object-fit: fill;
+.price-plan {
+    position: absolute;
+    bottom: 0;
     width: 100%;
+    height: 50px;
+    border: 1px solid red;
 }
 
-.btn-color{
+.title-plan {
+    font-size: 6.1dvh;
+}
+
+.card-plan h3 {
+    color: var(--color2);
+}
+
+.desk-plan {
+    text-align: start;
+    font-size: 1.15dvw;
+}
+
+.img-plans {
+    border-radius: 50%;
+    width: 6cm;
+    height: 6cm;
+    object-fit: cover;
+}
+
+.btn-color {
     background-color: var(--color2);
 }
 
@@ -378,7 +400,7 @@ ul{
 
 /*End of tabs*/
 
-.contact-icon{
+.contact-icon {
     font-size: 30px;
     color: var(--color2);
 }
