--- a/style.css
+++ b/style.css
@@ -10,7 +10,71 @@ font-family: 'Roboto', sans-serif; */
     --color4: #F3EFCC;
 }
 
+/*Navbar*/
+.navbar {
+    transition: all 0.5s;
+}
 
+.navbar-brand h3 {
+    color: white;
+}
+
+.navbar .navbar-nav .nav-item a {
+    color: white;
+}
+
+.navbar .navbar-nav .nav-item .active {
+    color: var(--color4);
+}
+
+.navbar-scrolled {
+    background-color: var(--color2);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, .15);
+}
+
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link:focus {
+    color: var(--color3) !important;
+    transition: color 0.3s ease-in-out;
+}
+
+.navbar-brand:hover,
+.navbar-brand:focus {
+    color: var(--color3) !important;
+    transition: color 0.3s ease-in-out;
+}
+
+.navbar .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='rgba%28255, 255, 255, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>");
+}
+
+.navbar .navbar-toggler {
+    border: 1px solid rgba(255, 255, 255, 1);
+}
+/*End of Navbar*/
+/* Offcanvas */
+#offcanvasNav{
+    background-color: var(--color2);
+}
+.nav-canvas {
+    text-align: start;
+    max-height: max-content;
+    margin: 50% 0% 0% 0%;
+}
+.link-canvas h1{
+    color: white;
+    font-size: 40px;
+    margin: 30px 0px 4dvh 0px;
+    transition: color 0.3s ease-in-out;
+}
+.nav-canvas a{
+    text-decoration: none;
+}
+.link-canvas h1:hover{
+    color: var(--color3)!important;
+}
+
+/* End of offcanvas */
 h1,
 h2,
 h3,
@@ -54,42 +118,6 @@ body {
     font-family: 'Ubuntu', sans-serif !important;
 }
 
-.abouthead {
-    background-size: cover;
-    margin-top: 60px;
-    height: 55vh;
-    position: relative;
-    color: white;
-    /* text-shadow: 2px 2px 2px rgba(0,0,0,.2); */
-}
-
-.abouthead-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .6);
-}
-
-.abouthead-overlay h1 {
-    font-size: 10ex;
-    color: var(--color3);
-}
-
-@media (max-width:768px) {
-    .abouthead {
-        min-height: 100vh;
-    }
-
-    .abouthead-overlay h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        font-size: calc(1.525rem + 5.3vw);
-
-    }
-}
 
 ul {
     list-style-type: none;
@@ -97,51 +125,7 @@ ul {
 
 /*End Section of BG on index*/
 
-/*Navbar*/
-.navbar {
-    transition: all 0.5s;
-}
-
-.navbar-brand h3 {
-    color: white;
-}
-
-.navbar .navbar-nav .nav-item a {
-    color: white;
-}
-
-.navbar .navbar-nav .nav-item .active {
-    color: var(--color4);
-}
-
-.navbar-scrolled {
-    background-color: var(--color2);
-    box-shadow: 0 3px 10px rgba(0, 0, 0, .15);
-}
-
-.navbar-nav .nav-link:hover,
-.navbar-nav .nav-link:focus {
-    color: var(--color3) !important;
-    transition: color 0.3s ease-in-out;
-}
-
-.navbar-brand:hover,
-.navbar-brand:focus {
-    color: var(--color3) !important;
-    transition: color 0.3s ease-in-out;
-}
-
-.navbar .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='rgba%28255, 255, 255, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>");
-}
-
-.navbar .navbar-toggler {
-    border: 1px solid rgba(255, 255, 255, 1);
-}
-
-/*End of Navbar*/
-
-/*BG on index*/
+/*Hero on index*/
 .homehead {
     background-size: cover;
     min-height: 100vh;
@@ -165,7 +149,122 @@ ul {
 .homehead-overlay h5 {
     font-size: 3dvh;
 }
+/*End Section of Hero on index*/
 
+.img-rest {
+    width: 7cm;
+    height: 17cm;
+    object-fit: cover;
+}
+
+.img-rest-2 {
+    width: 7cm;
+    height: 17cm;
+    object-fit: cover;
+    margin-top: 50px;
+}
+
+.welcome-index {
+    font-size: 85px;
+    border-left: 7px solid var(--color2);
+    padding-left: 10px;
+    line-height: 70px;
+}
+
+.capt-index {
+    font-size: 20px;
+    line-height: 40px;
+}
+
+.desk {
+    width: 50%;
+}
+
+
+/* Phone Style */
+@media (max-width: 799px) {
+    .navbar {
+        background-color: var(--color2);
+    }
+
+    .welcome-index {
+        font-size: 45px;
+    }
+
+    .img-rest {
+        width: 4cm;
+        height: 10cm;
+    }
+
+    .img-rest-2 {
+        width: 4cm;
+        height: 10cm;
+        margin-top: 0px;
+    }
+
+    .homehead {
+        min-height: 80vh;
+    }
+
+    .desk {
+        width: 100%;
+    }
+
+    .homehead-overlay h1 {
+        font-size: 15dvw;
+    }
+    
+    .homehead-overlay h5 {
+        font-size: 3.80dvw;
+    }
+}
+
+/* start of large tablet styles */
+@media screen and (min-width: 800px) and (max-width: 1080px) {
+    .img-rest {
+        width: 4cm;
+        height: 17cm;
+    }
+
+    .img-rest-2 {
+        width: 4cm;
+        height: 17cm;
+        margin-top: 0px;
+    }
+
+    .welcome-index {
+        font-size: 55px;
+    }
+    
+
+    .homehead-overlay h1 {
+        font-size: 110px;
+    }
+    
+    .homehead-overlay h5 {
+        font-size: 18px;
+    }
+
+}
+
+
+/*Carousel recomendation*/
+
+.c-item {
+    height: 18cm;
+}
+
+.c-img {
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.6);
+}
+
+.moreabout {
+    font-size: 20px;
+}
+
+/* heading bg*/
 .abouthead {
     background-size: cover;
     margin-top: 60px;
@@ -201,135 +300,8 @@ ul {
         font-size: calc(1.525rem + 5.3vw);
 
     }
-
-
 }
-
-/*End Section of BG on index*/
-
-.img-rest {
-    width: 7cm;
-    height: 100dvh;
-    object-fit: cover;
-}
-
-.img-rest-2 {
-    width: 7cm;
-    height: 100dvh;
-    object-fit: cover;
-    margin-top: 50px;
-}
-
-.welcome {
-    font-size: 85px;
-}
-
-.heading {
-    font-size: 100px;
-
-    @media (max-width:768px) {
-        font-size: 56px;
-    }
-}
-
-.desk {
-    width: 50%;
-}
-
-.capt {
-    font-size: 20px;
-    line-height: 40px;
-}
-
-@media (max-width: 550px) {
-    .navbar {
-        background-color: var(--color2);
-    }
-
-    .welcome {
-        font-size: 45px;
-    }
-
-    .img-rest {
-        width: 4cm;
-        height: 45dvh;
-    }
-
-    .img-rest-2 {
-        width: 4cm;
-        height: 45dvh;
-        margin-top: 5px;
-    }
-
-    .homehead {
-        min-height: 80vh;
-    }
-
-    .desk {
-        width: 100%;
-    }
-
-    .homehead-overlay h1 {
-        font-size: 5vh;
-    }
-
-    .homehead-overlay h5 {
-        font-size: 15px;
-    }
-
-}
-
-/* start of large tablet styles */
-@media (max-width: 900px) {
-    .navbar {
-        background-color: var(--color2);
-    }
-
-    .img-rest {
-        width: 4cm;
-        height: 45vh;
-    }
-
-    .img-rest-2 {
-        width: 4cm;
-        height: 45vh;
-    }
-
-    .welcome {
-        font-size: 55px;
-    }
-
-    .desk {
-        width: 50%;
-    }
-
-    .homehead-overlay h1 {
-        font-size: 110px;
-    }
-
-    .homehead-overlay h5 {
-        font-size: 18px;
-    }
-
-}
-
-
-/*Carousel recomendation*/
-
-.c-item {
-    height: 18cm;
-}
-
-.c-img {
-    height: 100%;
-    object-fit: cover;
-    filter: brightness(0.6);
-}
-
-.moreabout {
-    font-size: 20px;
-}
-
+/* End of heading bg */
 
 /* Plans Card */
 
@@ -337,24 +309,21 @@ ul {
     border-radius: 2px;
     outline-width: 100px;
     padding: 20px 20px ;
-    outline: solid #32502e;
+    outline: .5px solid black;
     height: 1005px;
+    background-color: var(--color2);
 }
 
-.price-plan {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    border: 1px solid red;
+.card-plan p{
+    color: white ;
+}
+
+.card-plan h1,.card-plan h3{
+    color: var(--color3);
 }
 
 .title-plan {
     font-size: 6.1dvh;
-}
-
-.card-plan h3 {
-    color: var(--color2);
 }
 
 .desk-plan {
@@ -375,7 +344,7 @@ ul {
 
 /* menu card */
 .food-card img {
-    height: 40dvb;
+    height: 50dvh;
     object-fit: cover;
 }
 
