--- a/style.css
+++ b/style.css
@@ -51,27 +51,32 @@ font-family: 'Roboto', sans-serif; */
 .navbar .navbar-toggler {
     border: 1px solid rgba(255, 255, 255, 1);
 }
+
 /*End of Navbar*/
 /* Offcanvas */
-#offcanvasNav{
+#offcanvasNav {
     background-color: var(--color2);
 }
+
 .nav-canvas {
     text-align: start;
     max-height: max-content;
     margin: 50% 0% 0% 0%;
 }
-.link-canvas h1{
+
+.link-canvas h1 {
     color: white;
     font-size: 40px;
     margin: 30px 0px 4dvh 0px;
     transition: color 0.3s ease-in-out;
 }
-.nav-canvas a{
+
+.nav-canvas a {
     text-decoration: none;
 }
-.link-canvas h1:hover{
-    color: var(--color3)!important;
+
+.link-canvas h1:hover {
+    color: var(--color3) !important;
 }
 
 /* End of offcanvas */
@@ -83,6 +88,9 @@ h5,
 h6 {
     font-family: 'Nunito', sans-serif;
 }
+h1{
+    font-size: 3em;
+}
 
 html,
 body {
@@ -90,7 +98,11 @@ body {
     overflow-x: hidden;
     /* background-color: var(--color4) !important; */
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.375em;
 }
+
+
 
 /*BG on index*/
 .homehead {
@@ -149,6 +161,7 @@ ul {
 .homehead-overlay h5 {
     font-size: 3dvh;
 }
+
 /*End Section of Hero on index*/
 
 .img-rest {
@@ -213,7 +226,7 @@ ul {
     .homehead-overlay h1 {
         font-size: 15dvw;
     }
-    
+
     .homehead-overlay h5 {
         font-size: 3.80dvw;
     }
@@ -235,12 +248,12 @@ ul {
     .welcome-index {
         font-size: 55px;
     }
-    
+
 
     .homehead-overlay h1 {
         font-size: 110px;
     }
-    
+
     .homehead-overlay h5 {
         font-size: 18px;
     }
@@ -260,9 +273,6 @@ ul {
     filter: brightness(0.6);
 }
 
-.moreabout {
-    font-size: 20px;
-}
 
 /* heading bg*/
 .abouthead {
@@ -304,21 +314,28 @@ ul {
 /* End of heading bg */
 
 /* Plans Card */
-
 .card-plan {
     border-radius: 2px;
     outline-width: 100px;
-    padding: 20px 20px ;
+    padding: 20px 20px;
     outline: .5px solid black;
-    height: 1005px;
+    height: 30cm;
     background-color: var(--color2);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    /* margin: 10px; */
 }
 
-.card-plan p{
-    color: white ;
+.card-plan p {
+    color: white;
+    font-size: 20px;
 }
 
-.card-plan h1,.card-plan h3{
+.card-plan h1,
+.card-plan h3 {
     color: var(--color3);
 }
 
@@ -326,16 +343,67 @@ ul {
     font-size: 6.1dvh;
 }
 
-.desk-plan {
-    text-align: start;
-    font-size: 1.15dvw;
+.goal-container {
+    margin-top: 10px;
 }
 
 .img-plans {
+    align-self: center;
     border-radius: 50%;
     width: 6cm;
     height: 6cm;
+    object-fit: cover;  
+}
+
+/* End of plan */
+
+.image-container {
+    position: relative;
+}
+
+.img-category {
+    width: 5cm;
+    height: 2cm;
     object-fit: cover;
+    border-radius: 5px;
+    filter: grayscale(100%);
+}
+
+.text-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Background color for the text overlay */
+    color: white; /* Text color */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background .5s ease, transform .2s ease;
+}
+.nav-link.active .image-container img{
+    filter: grayscale(0%);
+    transform: scale(1.1);
+}
+.nav-link.active .text-overlay {
+    background: rgba(0, 0, 0, 0.4); /* Make the background transparent when selected */
+    transform: scale(1.1); /* Optional: Enlarge the text overlay slightly when selected */
+}
+
+.nav-link.active .text-overlay h1
+{
+    color: var(--color3);
+}
+.text-overlay h1 {
+    transition: color 0.3s ease; /* Add a color transition */
+    font-size: 40px;
+}
+.text-overlay h1:hover{
+    color: var(--color3) !important;
 }
 
 .btn-color {
@@ -367,6 +435,35 @@ ul {
     text-decoration: underline;
 }
 
+/* about us */
+.commit-bg {
+    background-size: cover;
+    width: 100%;
+    min-height: 62dvh;
+    position: relative;
+    color: white;
+    /* text-shadow: 2px 2px 2px rgba(0,0,0,.2); */
+}
+
+.comit-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .6);
+}
+
+.comit-overlay h1 {
+
+}
+
+.commit-overlay h5 {
+
+}
+
+
+
+
+/* End of about us */
 /*End of tabs*/
 
 .contact-icon {
