--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ ul {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .abouthead-overlay h1 {
@@ -413,14 +413,14 @@ ul {
 
 /* menu card */
 .food-card img {
-    height: 32%;
+    height: 10cm;
     width: 100%;
     object-fit: cover;
     border-radius: 0px;
 }
 .card.food-card{
     border-radius: 0cm;
-    height: 14cm;
+    height: 100%;
     /* border: 0px; */
 }
 .card.food-card .card-body .card-title{
@@ -428,6 +428,7 @@ ul {
     margin-bottom: 40px;
     text-align: center;
     line-height: 38px;
+    display: block;
 }
 
 /*Tabs on Category*/
@@ -489,8 +490,6 @@ ul {
 
 .commit-title {
     margin-top: 12px;
-    padding-bottom: 15dvh;
-    height: 5dvh;
     line-height: 32px;
 }
 
