--- a/style.css
+++ b/style.css
@@ -600,3 +600,54 @@ ul {
 .social {
     color: white;
 }
+
+.food{
+    display:flex;
+    flex-direction:column;
+    width:400px;
+    margin-bottom:60px;
+  }
+  .food>div{
+    box-shadow:0 15px 20px 0 rgba(0,0,0,0.5);
+  }
+  .food-image{
+    width:400px;
+    height:250px;
+  }
+  .food-image>img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    object-position:bottom;
+  }
+  .food-text{
+    margin:-20px auto;
+    margin-bottom:-20px;
+    height:auto;
+    width:300px;
+    background-color:var(--color2);
+    color:#fff;
+    padding:20px;
+  }
+  .food-meal-type{
+    font-style:italic;
+  }
+  .food-title{
+    font-size:2.2rem;
+    margin-bottom:20px;
+    margin-top:5px;
+  }
+  .food-body{
+    font-size:16px;
+  }
+  .food-price{
+    width:100px;
+    height:100px;
+    background-color:var(--color3);
+    color:#fff;
+    margin-left:auto;
+    font-size:2rem;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+  }
