--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
 /*Navbar*/
 .navbar {
     transition: all 0.5s;
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(2px);
 }
 
 .navbar-brand h3 {
